# deepwordle

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  README.rst  pyproject.toml  tox.ini
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
deepwordle/: __init__.py  app.py  audio_record.py  transcribe.py  twitter.py
deepwordle/components/: __init__.py  constants.py  letter.py  letters_grid.py  message.py  rich_text.py  utils.py
tests/: test_deepwordle.py
